# backender

./: .dockerignore  .env.example  .env.local  .gitignore  Cargo.toml  Dockerfile  README.md  justfile  lefthook.yml  run.sh
.cargo/: audit.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/backcli/: Cargo.toml
apps/backcli/src/: infisical_setup.rs  keycloak_setup.rs  main.rs
apps/user-api/: Cargo.toml
apps/user-api/src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  shutdown.rs  state.rs
apps/user-api/src/cache/: client.rs  config.rs  keys.rs  mod.rs  service.rs
apps/user-api/src/keycloak/: client.rs  config.rs  errors.rs  mod.rs  models.rs
apps/user-api/src/methods/: assign_role.rs  create_role.rs  create_user.rs  delete_role.rs  delete_user.rs  entities.rs  get_role_by_id.rs  get_roles.rs  get_user_by_id.rs  get_users.rs  health_check.rs  mod.rs  routes.rs  unassign_role.rs  update_role.rs  update_user.rs
apps/user-api/src/middleware/: circuit_breaker.rs  ip_filter.rs  mod.rs
apps/user-api/src/services/: integrated_user_service.rs  mod.rs
apps/user-api/tests/: api_integration_tests.rs  handler_tests.rs  openapi_test.rs
compose/: docker-compose.local.yml
compose/filebeat/: filebeat.yml
compose/prometheus/: prometheus.yml
hooks/: README.md  pre-commit
infra/terraform/envs/local/: main.tf
infra/terraform/modules/elasticsearch/: main.tf  values.yml
infra/terraform/modules/grafana/: main.tf  values.yml
infra/terraform/modules/keycloak/: main.tf  values.yml
infra/terraform/modules/kibana/: main.tf  values.yml
infra/terraform/modules/mysql/: main.tf  values.yml
infra/terraform/modules/postgresql/: main.tf  values.yml
infra/terraform/modules/prometheus/: main.tf  values.yml
infra/terraform/modules/redis/: main.tf  values.yml
infra/terraform/modules/traefik/: main.tf  values.yml
infra/terraform/modules/unleash/: main.tf  values.yml
libs/secrets/: Cargo.toml
libs/secrets/src/: config.rs  error.rs  lib.rs  provider.rs
libs/secrets/src/providers/: env.rs  infisical.rs  mod.rs
libs/secrets/tests/: infisical_integration_test.rs
libs/user-lib/: Cargo.toml
libs/user-lib/migrations/: 0001_init.down.sql  0001_init.sql
libs/user-lib/src/: entities.rs  errors_service.rs  lib.rs  rootuser.rs  user_service.rs  util.rs
libs/user-lib/src/repository/: errors.rs  mod.rs  models.rs  role_repository.rs  traits.rs  userRole_repository.rs  user_repository.rs  user_role_repository.rs
libs/user-lib/tests/: bdd.rs  user_service_test.rs  user_service_unit_test.rs
libs/user-lib/tests/features/: role_management.feature  user_management.feature
libs/user-lib/tests/support/: mod.rs  world.rs
libs/user-lib/tests/support/steps/: given.rs  mod.rs  then_role.rs  then_user.rs  when_role.rs  when_user.rs
manifest/overlays/local/ingress/:  grafana.yml  keycloak.yml  kibana.yml  prometheus.yml  traefik-dashboard.yml  unleash.yml
postman/: user-api.postman_collection.json
