[package]
name = "backcli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1.37", features = ["full"] }
user-lib = { path = "../../libs/user-lib" }