[package]
name = "backcli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "macros", "migrate"] }
tokio = { version = "1.37", features = ["full"] }
user-lib = { path = "../../libs/user-lib" }
user-api = { path = "../user-api" }
secrecy = { version = "0.8", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }