[package]
name = "user-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Local domain logic dependency
user-lib = { path = "../../libs/user-lib" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }