[package]
name = "user-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "user_api"
path = "src/lib.rs"

[[bin]]
name = "user-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "timeout", "limit", "request-id", "propagate-header"] }
tower_governor = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tracing-ecs = "0.5"

user-lib = { path = "../../libs/user-lib" }
secrets = { path = "../../libs/secrets" }

# Redis caching
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp"] }

# HTTP client for Keycloak
reqwest = { version = "0.12", features = ["json"] }

# Security - Secret handling
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }

# Input validation
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mockall = "0.13"
async-trait = "0.1"