[package]
name = "secrets"
version = "0.1.0"
edition = "2021"
description = "Secrets management abstraction with multiple provider support"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Infisical API
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

# Secret protection
secrecy = { version = "0.8", features = ["serde"] }

# URL encoding for API calls
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
